fixed my design, now content overflow apears better

--- a/frontend/src/Css/sajatcss.css
+++ b/frontend/src/Css/sajatcss.css
@@ -51,11 +51,19 @@ body {
   border-radius: 20px;
   padding: 10px;
   width: 90%;
-  height: 80vh;
   background: #cacaca;
+}
+.cardsFlex a {
+  display: flex;
 }
 .cardsFlex {
   justify-content: flex-start;
+  overflow: auto;
+  max-height: 70vh;
+}
+.cardsFlexItems {
+  flex: 1;
+  max-width: 300px;
 }
 .cardsContent {
   min-width: 200px;
